@@ -28,5 +28,6 @@ namespace Giver
 		public const string Version          	= "@version@";
 		public const string DataDir          	= "@datadir@";
 		public const string GnomeLocaleDir		= "@datadir@/locale";
+        public const string SoundDir            = "@datadir@/giver/sounds";
 	}
 }
