@@ -1,5 +1,13 @@
 2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* src/Defines.cs.in, configure.ac, data/Makefile.am, data/sounds,
+	  data/sounds/notify.wav, data/sounds/Makefile.am: Added sounds
+	* src/RequestHandler.cs, src/Application.cs: Added notification
+	* src/Protocol.cs: Added declined message
+	* giver.mdp: Added notify-sharp
+
+2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* src/ServiceLocator.cs: Fixed up the shutdown and photo handling
 	* src/RequestHandler.cs: Updated photo requests
 	* src/GiverService.cs: Fixed up requesting photos
